--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "normalize.css": "^5.0.0"
+    "normalize.css": "^5.0.0",
+    "underscore": "^1.8.3"
   }
 }
